   not mean that everything has been implemented, but it makes the implemented
   options accessible.

 - Included support for multithreading under Windows/Cygwin (Thanks to Arthur
   Smyles for pointing out the differences from Linux's pthreads)

 - New manual file for 'ecl-config' contributed by Peter Van Eynde.

 - NIL is no longer a valid specializer in a method.

* MOP compatibility:

 - SLOT-VALUE, SLOT-BOUNDP, etc, together with MOP SLOT*-USING-CLASS generic
   functions now rely entirely on slot-definition objects.

 - Effective slot definitions now have a "location" slot. Around methods for
   COMPUTE-SLOTS assign a location to each slot definition that has allocation
   :INSTANCE or :CLASS.

 - A new defclass option, :OPTIMIZE-SLOT-ACCESS, which defaults to the value of
   CLOS:*OPTIMIZE-SLOT-ACCESS*, controls whether the slots accessors should
   address directly the values in the class or use SLOT-VALUE. It should be set
   to NIL when one intends to redefine the SLOT-*-USING-CLASS methods, and
   to T when trying to get the most of the speed.

 - Implemented [FUNCALLABLE-]STANDARD-INSTANCE-ACCESS. They are synonyms for
   SI:INSTANCE-REF and are, as such, inlined and _very_ unsafe. Use with care.

 - Two nonstandard slots have been removed from standard-methods. Keeping track
   of which methods were in a defgeneric function is done using the property
   list of the methods.

* Errors fixed:

 - The intermediate output of the compiler is written in the directory in which
   the output will reside. [1]

 - ENSURE-GENERIC-FUNCTION relies on ENSURE-GENERIC-FUNCTION-USING-CLASS for
   doing the real work of (re)defining generic functions. This means E-G-F now
   handles :METHOD-CLASS and :GENERIC-FUNCTION-CLASS properly.

 - Implemented the standard behavior of NO-APPLICABLE-METHOD. Formerly, ECL
   expected this function to simply fail and never return.

 - --disable-shared works again in Mingw. The header file external.h has to be